--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,16 @@
 
 /* Your CSS Code here. */
+<.holder {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  width: 200px;
+  height: 200px;
+}
+
+/* Below styles are just for visualization, you can remove them if not needed */
+.item {
+  border: 1px solid black;
+  text-align: center;
+  padding: 10px;
+}
